Fix spacing and some styling

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -72,7 +72,7 @@ a {
         width: 100%;
         height: 360px;
         border-radius: $global-border-radius;
-        margin-bottom: 36px;
+        margin-bottom: 40px;
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -508,7 +508,7 @@ p {
             width: 80%;
 
             .type-label {
-                margin-left: 8px;
+                margin-left: 16px;
                 color: #787E82;
             }
         }
@@ -695,6 +695,14 @@ p {
 
 .gap-10 {
     gap: 10px;
+}
+
+.gap-12 {
+    gap: 12px;
+}
+
+.gap-18 {
+    gap: 18px;
 }
 
 .gap-20 {
