--- a/src/scss/_margins.scss
+++ b/src/scss/_margins.scss
@@ -74,6 +74,10 @@
 }
 
 // Margins Right
+.mr-5 {
+  margin-right: 5px;
+}
+
 .mr-3 {
   margin-right: 16px;
 }
